fixed spacing on logos and grid

--- a/src/Components/gallery.css
+++ b/src/Components/gallery.css
@@ -1,9 +1,10 @@
+
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
-  grid-row-gap: 0px;
+  grid-row-gap: 10px;
   background-color: #ffffff;
-  grid-column-gap: 10px;
+  grid-column-gap: 5px;
 }
 
 .grid-item {
@@ -29,7 +30,7 @@
   {
     position: relative;
     top: -110px;
-    left: -29px;
+    left: 0px;
     z-index: 2;
   }
 
@@ -77,7 +78,7 @@
       {
         position: relative;
         top: -130px;
-        left: -29px;
+        left: 0px;
         z-index: 2;
       }
 
@@ -124,7 +125,7 @@
         {
           position: relative;
           top: -185px;
-          left: 301px;
+          left: 330px;
           z-index: 2;
         }
         .animation1
@@ -170,7 +171,7 @@
             {
               position: relative;
               top: -225px;
-              left: -29px;
+              left: 0px;
               z-index: 2;
             }
 
@@ -217,7 +218,7 @@
                   {
                     position: relative;
                     top: -275px;
-                    left: 23px;
+                    left: 55px;
                     z-index: 2;
                   }
 
